<resources>
    <string name="app_name">PlanoDeCarreira</string>
    <string name="usuario">Usuário</string>
    <string name="Password">Password</string>
    <string name="Senha">Senha</string>
    <string name="Administrador">Administrador</string>
    <string name="senha">Senha</string>
    <string name="selecione_o_perfil">Selecione o Perfil</string>
    <string name="acessar">Acessar</string>
    <string name="memorizar_senha">Memorizar Senha</string>
    <string name="unknown_error">Erro Desconhecido!</string>
    <string name="empty_user">Informar Usuário e Senha</string>
    <string name="credentials_invalid">Informar Usuário e Senha</string>
    <string name="confirm_not_a_robot">Confirm not a robot</string>
    <string name="salvar_usuario">Lembrar Usuário</string>
    <string name="dropbox">DropBox</string>
    <string name="st_home_talent">Home Talento</string>
    <string name="tb_activity_talentos"> Home Tutor</string>
    <string name="st_module">Módulo</string>
    <string name="st_list_task">Lista de tarefas</string>
    <string name="st_detail_task">Detalhe da tarefa</string>
    <string name="lorem_ipsum">Imagine um parceiro ágil que possa aplicar continuamente a combinação certa de pessoas, processos e tecnologia para ajudar a garantir a qualidade dos produtos e serviços desenvolvidos por sua Empresa. Tudo isso utilizando a expertise acumulada de profissionais altamente capacitados em diversas áreas de atuação, capazes de customizar e escalonar os serviços de acordo com suas necessidades específicas. Somos, pois, a TQI – uma empresa de tecnologia com a proposta arrojada de transformar o domínio da informação em vantagem competitiva. Sua Empresa não deve se preocupar com soluções em T.I. para não perder o foco. Fornecemos ao seu empreendimento soluções em T.I. administrativas, sistêmicas, processuais, para avaliação de desempenho e infra-estrutura que certamente lhe garantirão maior competitividade, além da possibilidade de terceirização de suas operações administrativas ou sistêmicas, conferindo a sua Empresa, liberdade para pensar naquilo que lhe realmente é de grande valor e importância: o seu próprio negócio. A TQI entende que a satisfação de seus clientes é diretamente proporcional à capacidade de desenvolvimento e expansão dos seus empreendimentos. Não por acaso, nossa missão é “contribuir para o crescimento e melhor desempenho das Empresas e Organizações, desenvolvendo com excelência, soluções em Tecnologia da Informação”. Qualquer uma de nossas ações visa melhorar a assertividade de nossas soluções e consequentemente a sua completa satisfação.</string>
    <string name="tab_geral">Visão geral</string>
    <string name="tab_status">Alterar status</string>
    <string name="tab_comentario">Comentários</string>
    <string name="tab_log">Log de status</string>
    <string name="talento">talento</string>
    <string name="tutor">tutor</string>
    <string name="fazer">Fazer</string>
    <string name="feita">Feita</string>
    <string name="action_settings">Sair</string>
    <string name="voltar">Voltar</string>
</resources>
