<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryWhite"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


        <LinearLayout
            android:id="@+id/ln_layout_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_path" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ln_edit_text_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    app:hintAnimationEnabled="true">

                    <EditText
                        android:id="@+id/edit_text_usuário"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:orientation="horizontal"
                        android:fontFamily="sans-serif"
                        android:digits=" 1234567890abcdefghijklmnopqrstuvxyz .  _"
                        />


                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_edit_text_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Senha"
                    app:hintAnimationEnabled="true"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edit_text_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:fontFamily="sans-serif"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_botao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <CheckedTextView
                        android:id="@+id/recaptcha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:drawableLeft="@drawable/ic_nocaptcha"
                        android:text="Você é um humano?"
                        android:clickable="true"
                        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                        />

                    <Switch
                        android:id="@+id/sw_salvar_usuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:checked="true"
                        android:text="@string/salvar_usuario"
                        android:textSize="12dp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/bt_acessar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/rounded_bg"
                    android:text="@string/acessar"
                    android:textColor="@color/colorAccent" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

